# extending-jax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
.just/: hooks.just  test.just
include/: ffi.h
python/: __init__.py
python/rms_norm/: __init__.py
src/: ffi.cc  lib.rs
tests/: core_test.py  numpy_test.py  smoke_test.py  test_module.py  test_numpy.py
