[package]
name = "rms-norm"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rms_norm"
crate-type = ["cdylib"]

[dependencies]
cxx = "1.0"
numpy = {version = "0.25", optional = true}
pyo3 = {version = "0.25", features = ["auto-initialize"]}

[build-dependencies]
cxx-build = "1.0"
pyo3-build-config = "0.25"

[features]
default = ["numpy"]
extension-module = ["pyo3/extension-module"]
numpy = ["dep:numpy", "pyo3/extension-module"]
