[build-system]
requires = ["maturin>=1.7,<2.0", "jax>=0.8.0"]
build-backend = "maturin"

[project]
name = "rms_norm"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "jax>=0.8.0",
]
[tool.maturin]
#audit-wheel = "skip"
bindings = "pyo3"
features = ["extension-module"]
module-name = "rms_norm._rms_norm"
python-source = "python"

[dependency-groups]
dev = [
    "chex>=0.1.87",
    "pytest>=8.3.3",
]

[tool.ruff.lint]
extend-select = ["UP"]
