[build-system]
build-backend = "maturin"
requires = ["maturin>=1.7,<2.0", "jax>=0.8.0"]

[dependency-groups]
dev = [
  "chex>=0.1.87",
  "pytest>=8.3.3",
]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jax>=0.8.0",
]
dynamic = ["version"]
name = "rms_norm"
requires-python = ">=3.11"

[tool.maturin]
# audit-wheel = "skip"
bindings = "pyo3"
features = ["extension-module"]
module-name = "rms_norm._rms_norm"
python-source = "python"

[tool.ruff.lint]
extend-select = ["UP"]
